new table feature added

--- a/views/addProject.ejs
+++ b/views/addProject.ejs
@@ -14,11 +14,11 @@
         <label for="description">Description:</label>
         <textarea id="description" name="description" required></textarea><br><br>
 
-        <label for="start_date">Start Date:</label>
+        <label for="start_date">Upload Date:</label>
         <input type="date" id="start_date" name="start_date" required><br><br>
 
-        <label for="end_date">End Date:</label>
-        <input type="date" id="end_date" name="end_date"><br><br>
+        <!-- <label for="end_date">End Date:</label>
+        <input type="date" id="end_date" name="end_date"><br><br> -->
 
         <button type="submit">Add Project</button>
     </form>
