--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,9 @@
             <h1 class="text-3xl font-extrabold tracking-wide">Project Tracking System</h1>
             <nav>
                 <ul class="flex space-x-6 text-lg">
-                    <li><a href="/home" class="hover:underline">Home</a></li>
+                    <li><a href="/" class="hover:underline">Home</a></li>
                     <li><a href="/getallProjects" class="hover:underline">All Projects</a></li>
+                    <li><a href="/login" class="hover:underline">Login</a></li>
                 </ul>
             </nav>
         </div>
